--- a/navbar/testimonials.html
+++ b/navbar/testimonials.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,30 +29,31 @@
   </div>
 </header>
 <hr class="section-divider">
-<section class="about">
-    <h2>About us</h2>
-    <div class="about-container">
-        <div class="about-image">
-            <img src="/images/kitchen.jpg">
-        </div>
-        <div class="about-info">
-            <h3>Learn about us</h3>
-            <p>Founded in 2018 by two lifelong friends and coffee enthusiasts, 
-                Brew Haven was born out of a shared dream: 
-                to create a space where coffee is more than a beverage—it’s a ritual, a conversation, 
-                a culture. Our beans are sourced directly from smallholder farms across Kenya, 
-                Ethiopia, and Rwanda, ensuring ethical practices and exceptional quality.</p>
-                <br />
-                <p>We believe in slow mornings, bold brews, and honest hospitality. 
-                    Our team of baristas is trained not just in technique, 
-                    but in storytelling—because every blend has a journey, 
-                    and every customer deserves to be part of it.</p>
-                    <br />
-                    <h4>At Brew Haven, we don’t just serve coffee. We serve moments.</h4>
-        </div>
+<section class="testimonials">
+  <h2>What Our Customers Say</h2>
+  <div class="testimonial-slider" id="testimonial-slider">
+    <div class="testimonial active">
+      <p>“Brew Haven is more than a coffee shop—it’s a second home. The espresso is divine.”</p>
+      <h4>— James M., Nairobi</h4>
+    </div>
+    <div class="testimonial">
+      <p>“I ordered the Signature Roast online and it arrived in two days. Highly recommend!”</p>
+      <h4>— Lydia K., Kisumu</h4>
+    </div>
+    <div class="testimonial">
+      <p>“Their Pumpkin Spice Latte changed my life. I’m not even kidding.”</p>
+      <h4>— Brian O., Eldoret</h4>
+    </div>
+  </div>
+</section>
+<section class="cta-section">
+    <h2>Ready to taste the difference?</h2>
+    <h4>Visit us today or order your favorite blend online.</h4>
+    <div class="btns">
+        <button id="menu">Explore</button>
+        <button id="order">Buy coffee</button>
     </div>
 </section>
-<hr class="section-divider">
 <footer>
     <div class="links">
         <ul>
