--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <h1 class="logo">Brew Haven</h1>
     <button class="menu-toggle" id="menu-toggle">&#9776;</button>
     <ul class="nav-links" id="nav-links">
-      <li><a href="/navbar/about.html" target="_blank">About</a></li>
-      <li><a href="/navbar/menu.html" target="_blank">Menu</a></li>
-      <li><a href="/navbar/testimonials.html" target="_blank">Testimonials</a></li>
-      <li><a href="/navbar/contact.html" target="_blank">Contact</a></li>
+      <li><a href="navbar/about.html" target="_blank">About</a></li>
+      <li><a href="navbar/menu.html" target="_blank">Menu</a></li>
+      <li><a href="navbar/testimonials.html" target="_blank">Testimonials</a></li>
+      <li><a href="navbar/contact.html" target="_blank">Contact</a></li>
     </ul>
   </nav>
   <div class="hero-content">
