--- a/navbar/testimonials.html
+++ b/navbar/testimonials.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brew Haven Coffee</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
 <header class="hero">
@@ -13,10 +13,10 @@
     <h1 class="logo">Brew Haven</h1>
     <button class="menu-toggle" id="menu-toggle">&#9776;</button>
     <ul class="nav-links" id="nav-links">
-      <li><a href="/navbar/about.html" target="_blank">About</a></li>
-      <li><a href="/navbar/menu.html" target="_blank">Menu</a></li>
-      <li><a href="/navbar/testimonials.html" target="_blank">Testimonials</a></li>
-      <li><a href="/navbar/contact.html" target="_blank">Contact</a></li>
+      <li><a href="./about.html" target="_blank">About</a></li>
+      <li><a href="./menu.html" target="_blank">Menu</a></li>
+      <li><a href="./testimonials.html" target="_blank">Testimonials</a></li>
+      <li><a href="./contact.html" target="_blank">Contact</a></li>
     </ul>
   </nav>
   <div class="hero-content">
