--- a/navbar/menu.html
+++ b/navbar/menu.html
@@ -65,32 +65,32 @@
   <h2>Our Products</h2>
   <div class="menu-grid">
     <div class="menu-card" onclick="revealCartButton(this)">
-      <div class="image"><img src="/images/coffee.jpg" alt="Kenyan AA" /></div>
+      <div class="image"><img src="../images/coffee.jpg" alt="Kenyan AA" /></div>
       <br />
       <h3>Kenyan AA</h3>
       <p>KES. 300.00</p>
-      <button class="add-btn hidden" onclick="addToCart(event, 'Kenyan AA', 300, '/images/coffee.jpg')">Add to Cart</button>
+      <button class="add-btn hidden" onclick="addToCart(event, 'Kenyan AA', 300, '../images/coffee.jpg')">Add to Cart</button>
     </div>
     <div class="menu-card" onclick="revealCartButton(this)">
-      <div class="image"><img src="/images/mocha.jpg" alt="Mocha Roast" /></div>
+      <div class="image"><img src="../images/mocha.jpg" alt="Mocha Roast" /></div>
       <br />
       <h3>Mocha Roast</h3>
       <p>KES. 450.00</p>
-      <button class="add-btn hidden" onclick="addToCart(event, 'Mocha Roast', 450, '/images/mocha.jpg')">Add to Cart</button>
+      <button class="add-btn hidden" onclick="addToCart(event, 'Mocha Roast', 450, '../images/mocha.jpg')">Add to Cart</button>
     </div>
         <div class="menu-card" onclick="revealCartButton(this)">
-      <div class="image"><img src="/images/coffeecup.jpg" alt="Delight" /></div>
+      <div class="image"><img src="../images/coffeecup.jpg" alt="Delight" /></div>
       <br />
       <h3>Delight</h3>
       <p>KES. 650.00</p>
-      <button class="add-btn hidden" onclick="addToCart(event, 'Delight', 650, '/images/coffeecup.jpg')">Add to Cart</button>
+      <button class="add-btn hidden" onclick="addToCart(event, 'Delight', 650, '../images/coffeecup.jpg')">Add to Cart</button>
     </div>
         <div class="menu-card" onclick="revealCartButton(this)">
-      <div class="image"><img src="/images/delight.jpg" alt="Take Away" /></div>
+      <div class="image"><img src="../images/delight.jpg" alt="Take Away" /></div>
       <br />
       <h3>Take Away</h3>
       <p>KES. 550.00</p>
-      <button class="add-btn hidden" onclick="addToCart(event, 'Take Away', 550, '/images/delight.jpg')">Add to Cart</button>
+      <button class="add-btn hidden" onclick="addToCart(event, 'Take Away', 550, '../images/delight.jpg')">Add to Cart</button>
     </div>
   </div>
 </section>
@@ -135,16 +135,16 @@
     <h2>Gallery</h2>
     <div class="gallery-cards">
         <div class="gallery-card">
-            <img src="/images/coffee.jpg">
+            <img src="../images/coffee.jpg">
         </div>
             <div class="gallery-card">
-            <img src="/images/coffeecup.jpg">
+            <img src="../images/coffeecup.jpg">
         </div>
             <div class="gallery-card">
-            <img src="/images/mocha.jpg">
+            <img src="../images/mocha.jpg">
         </div>
             <div class="gallery-card">
-            <img src="/images/delight.jpg">
+            <img src="../images/delight.jpg">
         </div>
     </div>
 </section>
@@ -154,9 +154,9 @@
     <div class="links">
         <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="menu.html">menu</a></li>
-            <li><a href="testimonials.html">testimonials</a></li>
-            <li><a href="about.html">about</a></li>
+            <li><a href="./menu.html">menu</a></li>
+            <li><a href="./testimonials.html">testimonials</a></li>
+            <li><a href="./about.html">about</a></li>
         </ul>
     </div>
 <div class="social">
