--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>About us</h2>
     <div class="about-container">
         <div class="about-image">
-            <img src="/images/kitchen.jpg">
+            <img src="/images/coffee.jpg">
         </div>
         <div class="about-info">
             <h3>Learn about us</h3>
